[tool.poetry]
name = "j5"
version = "1.1.2"
description = "j5 Robotics Framework"
authors = ["j5 contributors <j5api@googlegroups.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/j5api/j5"
homepage = "https://j5.org.uk"
documentation = "https://j5.org.uk"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Typing :: Typed",
    "Topic :: Education",
]

[tool.poetry.dependencies]
python = "^3.7"
pyusb = "^1.0"
pyserial = "^3.4"

[tool.poetry.dev-dependencies]
darglint = "^1.8"
flake8 = "^5"  # Flake8 6.x requires Python 3.8
flake8-bugbear = "^22"
flake8-builtins = "^2"
flake8-commas = "^2.1"
flake8-comprehensions = "^3.10"
flake8-debugger = "^4.1"
flake8-docstrings = "^1.6"
flake8-mutable = "^1.2"
flake8-print = "^5.0"
flake8-todo = "^0.7.0"
isort = {version = "^5.11",extras = ["pyproject"]}
mypy = "^0.991"
pytest = "^7.2"
pytest-cov = "^4"
rope = "^1.5.1"
sphinx = "^4.3"  # Sphinx 5.x required Python 3.8
sphinx-rtd-theme = "^1.1.1"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.isort]
atomic = true
balanced_wrapping = true
# vertical hanging indent style wrapping
multi_line_output = 3
include_trailing_comma = true

known_first_party = "j5"
default_section = "THIRDPARTY"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[tool.mypy]
mypy_path = "stubs"

warn_unused_ignores = true
warn_return_any = true
show_error_codes = true

strict_optional = true
no_implicit_optional = true

disallow_any_unimported = true
disallow_any_explicit = true
disallow_subclassing_any = true
disallow_any_generics = true

disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true

check_untyped_defs = true
