[tool.poetry]
name = "j5"
version = "1.1.2"
description = "j5 Robotics Framework"
authors = ["j5 contributors <j5api@googlegroups.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/srobo/j5"
homepage = "https://studentrobotics.org/"
documentation = "https://j5.readthedocs.io/"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Typing :: Typed",
    "Topic :: Education",
]

[tool.poetry.dependencies]
python = "^3.7"
pyusb = "^1.0"
pyserial = "^3.4"

[tool.poetry.dev-dependencies]
flake8 = "*"
flake8-bugbear = "*"
flake8-builtins = "*"
flake8-commas = "*"
flake8-comprehensions = "*"
flake8-debugger = "*"
flake8-docstrings = "*"
flake8-mutable = "*"
flake8-print = "*"
flake8-todo = "*"
isort = "*"
mypy = "*"
pytest = "*"
pytest-cov = "*"
rope = "*"
setuptools = "*"
sphinx = "*"
sphinx-rtd-theme = "*"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.isort]
atomic = true
balanced_wrapping = true
# vertical hanging indent style wrapping
multi_line_output = 3
include_trailing_comma = true

known_first_party = "j5"
default_section = "THIRDPARTY"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[tool.mypy]
mypy_path = "stubs"

warn_unused_ignores = true
warn_return_any = true
show_error_codes = true

strict_optional = true
no_implicit_optional = true

disallow_any_unimported = true
disallow_any_explicit = true
disallow_subclassing_any = true
disallow_any_generics = true

disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true

check_untyped_defs = true
